Weld Modifier: interferes with Wireframe overlay #72412

Closed
opened 2019-12-13 04:22:42 +01:00 by Stanislav Blinov · 5 comments

System Information
Operating system: 5.4.2-arch1-1
Graphics card: GTX980Ti

Blender Version
Broken: 2.82 (afcdea3961)

Short description of error
Weld Modifier may cause the Wireframe overlay to disappear.

Exact steps for others to reproduce the error

  1. In the default scene, delete everything and add a Grid mesh
  2. Enable the Wireframe overlay
  3. Note that grid edges are displayed in viewport
  4. Enter edit mode, with everything selected do Edge -> Edge Split (alternatively, in object mode add an Edge Split modifier and set the angle to 0)
  5. Note that grid edges are still displayed in viewport
  6. Add the Weld modifier
  7. Note that grid edges are no longer displayed in viewport
  8. Disable or remove Weld modifier
  9. Note that grid edges are once again displayed in viewport
**System Information** Operating system: 5.4.2-arch1-1 Graphics card: GTX980Ti **Blender Version** Broken: 2.82 (afcdea3961c2cc9a63c2e8613f8bbfa0ba49f583) **Short description of error** Weld Modifier may cause the Wireframe overlay to disappear. **Exact steps for others to reproduce the error** 1. In the default scene, delete everything and add a Grid mesh 2. Enable the Wireframe overlay 3. Note that grid edges are displayed in viewport 3. Enter edit mode, with everything selected do Edge -> Edge Split (alternatively, in object mode add an Edge Split modifier and set the angle to 0) 4. Note that grid edges are still displayed in viewport 5. Add the Weld modifier 6. Note that grid edges are no longer displayed in viewport 7. Disable or remove Weld modifier 8. Note that grid edges are once again displayed in viewport

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can confirm. Investigating...

I can confirm. Investigating...

This issue was referenced by 9b871683b1

This issue was referenced by 9b871683b1d1bfbcb2e9f2bc57a3065206240191

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Germano Cavalcante self-assigned this 2019-12-14 01:48:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72412
No description provided.