Fix T72412: Weld Modifier: Merged edges not displayed in wireframe